Modificaciones al CRUD de las notas MOD Consulta

--- a/Views/Admin/Admins.cshtml
+++ b/Views/Admin/Admins.cshtml
@@ -299,7 +299,7 @@ else
                                     title: "Error al procesar la petición",
                                     text: "Por favor comunique a un administrador en caso de que el error persista.",
                                 });
-                                $('#modalNewDoc').modal("hide");
+                                $('#modalNewAdm').modal("hide");
                                 formUsuario.reset();
                                 tableAdmins.ajax.reload();
                             }
