--- a/Views/Admin/NotasAlumno.cshtml
+++ b/Views/Admin/NotasAlumno.cshtml
@@ -2,100 +2,145 @@
 @{
     ViewBag.Title = "Edición de notas";
     Layout = "~/Views/Shared/_Paneles.cshtml";
-}
-@if (Session["User"] == null || !Session["Rol"].Equals("Administrador"))
-{
-    <script> window.location.href='@Url.Action("Index", "Home")'; </script>
-}
-else
-{
-    <main class="app-content">
-        <div class="app-title">
-            <div>
-                <h1><i class="fas fa-file-signature"></i> Notas estudiante</h1>
-                <p>Edición de notas</p>
-                <button class="btn btn-info" type="button" onclick="openModal();"><i class="fas fa-search-plus"></i> Asignar notas a materia</button>
-            </div>
-            <ul class="app-breadcrumb breadcrumb">
-                <li class="breadcrumb-item"><i class="fas fa-home"></i></li>
-                <li class="breadcrumb-item"><a href="@Url.Content("~/Admin/NotasAlumno/"+ViewBag.ID+"?curso="+ViewBag.Curso)">Notas estudiante</a></li>
-            </ul>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="tile">
-                    <div class="tile-body">
-                        <div class="table-responsive">
-                            <table class="table table-hover table-bordered" id="Notas" role="grid" aria-describedby="tableRoles_info" style="width: 1533px;">
-                                <thead>
-                                    <tr>
-                                        <th>ID</th>
-                                        <th>Asignatura</th>
-                                        <th>Nota #1</th>
-                                        <th>Nota #2</th>
-                                        <th>Nota #3</th>
-                                        <th>Definitiva</th>
-                                        <th>Acciones</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+    List<SelectListItem> items = (List<SelectListItem>)ViewContext.Controller.ViewBag.Items;
+    }
+    @if (Session["User"] == null || !Session["Rol"].Equals("Administrador"))
+    {
+        <script> window.location.href='@Url.Action("Index", "Home")'; </script>
+    }
+    else
+    {
+        <main class="app-content">
+            <div class="app-title">
+                <div>
+                    <h1><i class="fas fa-file-signature"></i> Notas estudiante</h1>
+                    <p>Edición de notas</p>
+                    <button class="btn btn-info" type="button" onclick="openModal();"><i class="fas fa-search-plus"></i> Asignar notas a materia</button>
                 </div>
+                <ul class="app-breadcrumb breadcrumb">
+                    <li class="breadcrumb-item"><i class="fas fa-home"></i></li>
+                    <li class="breadcrumb-item"><a href="@Url.Content("~/Admin/NotasAlumno/"+ViewBag.ID+"?curso="+ViewBag.Curso)">Notas estudiante</a></li>
+                </ul>
             </div>
-        </div>
-    </main>
-
-    <!---Modal 2-->
-    <div class="modal fade" id="modalEditNot" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-md">
-            <div class="modal-content">
-                <div class="modal-header headerRegister" style="background: #04948c;color: #FFF;">
-                    <h5 class="modal-title" id="titleModal">Editar notas</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
+            <div class="row">
+                <div class="col-md-12">
                     <div class="tile">
                         <div class="tile-body">
-                            <form id="formUsuario2" name="formUsuario2" class="form-horizontal">
-                                <input type="hidden" id="idUsuario2" name="idUsuario2" value="">
-                                <p class="text-primary">Todos los campos son obligatorios.</p>
-                                <div class="form-row">
-                                    <div class="form-group col-md-6">
-                                        <label for="txtN1">Nota 1</label>
-                                        <input type="number" min="0" max="5" step=".1" class="form-control" id="txtN1" name="txtN1" required="">
+                            <div class="table-responsive">
+                                <table class="table table-hover table-bordered" id="Notas" role="grid" aria-describedby="tableRoles_info" style="width: 1533px;">
+                                    <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>Asignatura</th>
+                                            <th>Nota #1</th>
+                                            <th>Nota #2</th>
+                                            <th>Nota #3</th>
+                                            <th>Definitiva</th>
+                                            <th>Acciones</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <div class="modal fade" id="modalNew" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-md">
+                <div class="modal-content">
+                    <div class="modal-header headerRegister" style="background: #04948c;color: #FFF;">
+                        <h5 class="modal-title" id="titleModal">Registro nuevo</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="formUsuario" name="formUsuario" class="form-horizontal">
+                            <p class="text-primary">Todos los campos son obligatorios.</p>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="materia">Materia</label>
+                                    @Html.DropDownList("mat", items, "Seleccione la materia", new { @class = "form-control" })                              
                                     </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="N1">Nota 1</label>
+                                    <input type="number" min="0" max="5" step=".1" class="form-control" id="N1" name="N1" required="">
                                 </div>
-                                <div class="form-row">
-                                    <div class="form-group col-md-6">
-                                        <label for="txtN2">Nota 2</label>
-                                        <input type="number" min="0" max="5" step=".1" class="form-control" id="txtN2" name="txtN1" required="">
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="N2">Nota 2</label>
+                                    <input type="number" min="0" max="5" step=".1" class="form-control" id="N2" name="N1" required="">
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="N3">Nota 3</label>
+                                    <input type="number" min="0" max="5" step=".1" class="form-control" id="N3" name="N3" required="">
+                                </div>
+                            </div>
+                            <div class="tile-footer">
+                                <button id="btnActionForm" onClick="" class="btn btn-primary" type="submit"><i class="fa fa-fw fa-lg fa-check-circle"></i><span id="btnText">Guardar</span></button>&nbsp;&nbsp;&nbsp;
+                                <button class="btn btn-danger" type="button" data-dismiss="modal"><i class="fa fa-fw fa-lg fa-times-circle"></i>Cerrar</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!---Modal 2-->
+        <div class="modal fade" id="modalEditNot" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-md">
+                <div class="modal-content">
+                    <div class="modal-header headerRegister" style="background: #04948c;color: #FFF;">
+                        <h5 class="modal-title" id="titleModal">Editar notas</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="tile">
+                            <div class="tile-body">
+                                <form id="formUsuario2" name="formUsuario2" class="form-horizontal">
+                                    <input type="hidden" id="idUsuario2" name="idUsuario2" value="">
+                                    <p class="text-primary">Todos los campos son obligatorios.</p>
+                                    <div class="form-row">
+                                        <div class="form-group col-md-6">
+                                            <label for="txtN1">Nota 1</label>
+                                            <input type="number" min="0" max="5" step=".1" class="form-control" id="txtN1" name="txtN1" required="">
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="form-row">
-                                    <div class="form-group col-md-6">
-                                        <label for="txtN3">Nota 3</label>
-                                        <input type="number" min="0" max="5" step=".1" class="form-control" id="txtN3" name="txtN3" required="">
+                                    <div class="form-row">
+                                        <div class="form-group col-md-6">
+                                            <label for="txtN2">Nota 2</label>
+                                            <input type="number" min="0" max="5" step=".1" class="form-control" id="txtN2" name="txtN1" required="">
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="tile-footer">
-                                    <button id="btnActionForm" onClick="sendEdit();" class="btn btn-primary" type="submit"><i class="fa fa-fw fa-lg fa-check-circle"></i><span id="btnText">Guardar</span></button>&nbsp;&nbsp;&nbsp;
-                                    <button class="btn btn-danger" type="button" data-dismiss="modal"><i class="fa fa-fw fa-lg fa-times-circle"></i>Cerrar</button>
-                                </div>
-                            </form>
+                                    <div class="form-row">
+                                        <div class="form-group col-md-6">
+                                            <label for="txtN3">Nota 3</label>
+                                            <input type="number" min="0" max="5" step=".1" class="form-control" id="txtN3" name="txtN3" required="">
+                                        </div>
+                                    </div>
+                                    <div class="tile-footer">
+                                        <button id="btnActionForm" onClick="sendEdit();" class="btn btn-primary" type="submit"><i class="fa fa-fw fa-lg fa-check-circle"></i><span id="btnText">Guardar</span></button>&nbsp;&nbsp;&nbsp;
+                                        <button class="btn btn-danger" type="button" data-dismiss="modal"><i class="fa fa-fw fa-lg fa-times-circle"></i>Cerrar</button>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    @section scripts{
-        <script>
+        @section scripts{
+            <script>
             document.addEventListener('DOMContentLoaded', function () {
                 var data = { id: @ViewBag.ID, curso: @ViewBag.Curso };
         $(document).ready(function () {
@@ -152,7 +197,75 @@ else
                     "bDestroy": true
                 });
         });
-        }, false);
+      if (document.querySelector("#formUsuario")) {
+                let formUsuario = document.querySelector("#formUsuario");
+                formUsuario.onsubmit = function (e) {
+                    e.preventDefault();
+                    let mat = document.querySelector('#mat').value;
+                    let n1 = document.querySelector('#N1').value;
+                    let n2 = document.querySelector('#N2').value;
+                    let n3 = document.querySelector('#N3').value;
+
+                    if (mat == '' || n1 == '' || n2 == '' || n2 == '' || n3 == '' || n1 < 0 || n1 > 5 || n2 < 0 || n2 > 5 || n3 < 0 || n3 > 5) {
+                        swal("Atención", "Todos los campos son obligatorios o las notas estan fuera de rango.", "error");
+                        return false;
+                    }
+
+                    let elementsValid = document.getElementsByClassName("valid");
+                    for (let i = 0; i < elementsValid.length; i++) {
+                        if (elementsValid[i].classList.contains('is-invalid')) {
+                            swal("Atención", "Por favor verifique los campos en rojo.", "error");
+                            return false;
+                        }
+                    }
+
+                   var data = { strIdentificacion: strIdentificacion, strNombre: strNombre, strApellido: strApellido, strEmail: strEmail, Telefono: Telefono,  strPassword: strPassword, StatusRedy: StatusRedy };
+                      $.ajax({
+                            type: "POST",
+                            url: "@Url.Action("InsertAdm", "Admin")",
+                            content: "application/json; charset=utf-8",
+                            dataType: "json",
+                            data: data,
+                            success: function (d) {
+                                var msg = d.msg;
+                                if (d.Success == true) {
+                                    swal("Success", {
+                                        icon: "success",
+                                        title: "Éxito al procesar la petición",
+                                        text: msg,
+                                    });
+                                    $('#modalNew').modal("hide");
+                                    formUsuario.reset();
+                                    tableNotas.ajax.reload();
+                                }else {
+                                    swal("Error", {
+                                        icon: "error",
+                                        title: "Error al procesar la petición",
+                                        text: msg,
+                                    });
+                                    $('#modalNew').modal("hide");
+                                    formUsuario.reset();
+                                    tableNotas.ajax.reload();
+                                }
+                            },
+                            error: function (xhr, textStatus, errorThrown) {
+                                swal("Error", {
+                                    icon: "error",
+                                    title: "Error al procesar la petición",
+                                    text: "Por favor comunique a un administrador en caso de que el error persista.",
+                                });
+                                $('#modalNew').modal("hide");
+                                formUsuario.reset();
+                                tableNotas.ajax.reload();
+                            }
+                        });
+                       }
+                        return false;
+            }
+            }, false);
+            function openModal() {
+                $('#modalNew').modal('show');
+            }
         function fntEditNot(id) {
                 var data = { id: id,curso:@ViewBag.Curso};
             $.ajax({
@@ -223,7 +336,7 @@ else
                             data: datax,
                             success: function (d) {
                                 var msg = d.msg;
-                                
+
                                 if (d.Success == true) {
                                     swal("Success", {
                                         icon: "success",
@@ -256,9 +369,9 @@ else
             }
 
 
-        </script>
+            </script>
 
+
+        }
 
     }
-
-}
